* Release 1.5.0:
	* Fixed Bug #3: Make operator in work.

09/01/2017 Release 1.4.0:
	* Fixed Bug #2: Replace slow SList walkLength calls.
	* Fixed Bug #1: Newest items are evicted, instead of oldest.

08/31/2017 Release 1.3.0
	* Fixed Bug: opApply was not iterating in order.
	* Fixed Bug: Code in documentation is now checked at compile time.