@@ -4,7 +4,6 @@
 
 * Is there a way to make BDD only a dependency for building tests?
 * Should evict event fire on clear and remove?
-* Should length be size_t?
 * Replace front/back with head/tail?
 * Replace element/entry with item
 * Add link to changelog and release date to docs
